tests/error/linear_errors/parent_moved5.err
Error: Copy violation (at $FILE:17:15)
   | 
15 | def foo(s: MyStruct @owned, b: bool) -> int:
16 |     if b or (t := s):
17 |         return s.x
   |                ^^^ Field `s.x` cannot be returned ...

Note:
   | 
15 | def foo(s: MyStruct @owned, b: bool) -> int:
16 |     if b or (t := s):
   |                   - ... since variable `s` with non-copyable type `MyStruct` was
   |                     already moved here

Guppy compilation failed due to 1 previous error
